--- a/src/App.css
+++ b/src/App.css
@@ -7,20 +7,24 @@
 }
 
 
+.grey-text {
+  color: #918E9B;
+}
+
 /* Nav */
 nav {
-  padding: 2rem;
+  padding: 15px 32px;
   box-shadow: 0px 2.98256px 7.4564px rgba(0, 0, 0, 0.1);
 }
 
 .nav--logo {
-  max-width: 6.25rem;
-  height: 1.56rem;
+  max-width: 100px;
+  height: 25px;
 }
 
 /* Main content */
 section {
-  padding: 1.25rem;
+  padding: 32px;
 }
 
 .main-section {
@@ -30,7 +34,7 @@ section {
 
 .main-section--img {
   width: 90%;
-  max-width: 44rem;
+  max-width: 700px;
   align-self: center;
 }
 
@@ -39,13 +43,37 @@ section {
 }
 
 .main-section p {
-  width: 19rem;
+  width: 300px;
   line-height: 1.1;
 }
 
 
 /* Cards */
 
-.experience-card {
-  padding: 3rem;
+.card {
+  width: 275px;
+  padding: 32px;
+  font-size: 0.8rem;
+}
+
+.card--photo {
+  width: 100%;
+}
+
+.card--stats {
+  display: flex;
+  align-items: center;
+  height: fit-content;
+}
+
+.card--stats span {
+  padding: 0px 2px;
+}
+
+.card--star-icon {
+  height: 14px;
+}
+
+.card > * {
+  padding: 5px 0px;
 }
