--- a/src/App.css
+++ b/src/App.css
@@ -2,6 +2,7 @@
 
 * {
   margin: 0;
+  padding: 0;
   box-sizing: border-box;
   font-family: 'Poppins', sans-serif;
 }
@@ -55,13 +56,19 @@ section {
 }
 
 .card {
-  width: 275px;
-  padding: 32px;
-  font-size: 0.8rem;
+  width: 175px;
+  font-size: 12px;
+  flex: 0 0 auto;         
+  display: flex;          
+  flex-direction: column; 
+  position: relative;
+  margin: 0px 10px;
 }
+
 
 .card--photo {
   width: 100%;
+  margin-bottom: 10px;
 }
 
 .card--stats {
@@ -78,6 +85,12 @@ section {
   height: 14px;
 }
 
-.card > * {
-  padding: 5px 0px;
+.card--badge {
+  position: absolute;
+  top: 6px;
+  left: 6px;
+  background-color: white;
+  padding: 5px 7px;
+  border-radius: 2px;
+  font-weight: bold;
 }
