--- a/src/App.css
+++ b/src/App.css
@@ -18,7 +18,7 @@ nav {
   box-shadow: 0px 2.98256px 7.4564px rgba(0, 0, 0, 0.1);
 }
 
-.nav--logo {
+.nav__logo {
   max-width: 100px;
   height: 25px;
 }
@@ -33,7 +33,7 @@ section {
   flex-direction: column;
 }
 
-.main-section--img {
+.main-section__img {
   width: 90%;
   max-width: 700px;
   align-self: center;
@@ -53,6 +53,7 @@ section {
 
 .cards-container {
   display: flex;
+  overflow-y: scroll;
 }
 
 .card {
@@ -66,26 +67,26 @@ section {
 }
 
 
-.card--photo {
+.card__photo {
   width: 100%;
   margin-bottom: 10px;
 }
 
-.card--stats {
+.card__stats {
   display: flex;
   align-items: center;
   height: fit-content;
 }
 
-.card--stats span {
+.card__stats span {
   padding: 0px 2px;
 }
 
-.card--star-icon {
+.card__star-icon {
   height: 14px;
 }
 
-.card--badge {
+.card__badge {
   position: absolute;
   top: 6px;
   left: 6px;
